--- a/ToDo.txt
+++ b/ToDo.txt
@@ -5,3 +5,6 @@
 
 А вообще, моя идея с dll мега крутая!
 Странно что никто так не делает.
+
+Надо сделать нормальные матрицы, через перемещение и вращение. 
+Пропорциональное изменеение пока опустим.
