--- a/ToDo.txt
+++ b/ToDo.txt
@@ -2,6 +2,7 @@
 1. управление камерой, видом. В том числе автоматическое как в гонках или шутерах. 
 2. подключение клавиатуры к контролю объектами. Чтоб машинка ездила!
 3. Подключение текстур. Правда сейчас Х объекты могут иметь разные текстуры, но надо отдельно.
+4. Победа над утечкой памяти. При завершении приложения. Бесит! Надо free вызывать.
 
 А вообще, моя идея с dll мега крутая!
 Странно что никто так не делает.
