Ignore leaks of 154648 bytes, of they not grow. Add *.jpg, *.png & .*bmp to GIT LFS. Convert ToDo.txt to utf8

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,11 +1,11 @@
-Надо добавить со стороны питона:
-1. управление камерой, видом. В том числе автоматическое как в гонках или шутерах. 
-2. подключение клавиатуры к контролю объектами. Чтоб машинка ездила!
-3. Подключение текстур. Правда сейчас Х объекты могут иметь разные текстуры, но надо отдельно.
-4. Победа над утечкой памяти. При завершении приложения. Бесит! Надо free вызывать.
+п»їРќР°РґРѕ РґРѕР±Р°РІРёС‚СЊ СЃРѕ СЃС‚РѕСЂРѕРЅС‹ РїРёС‚РѕРЅР°:
+1. СѓРїСЂР°РІР»РµРЅРёРµ РєР°РјРµСЂРѕР№, РІРёРґРѕРј. Р’ С‚РѕРј С‡РёСЃР»Рµ Р°РІС‚РѕРјР°С‚РёС‡РµСЃРєРѕРµ РєР°Рє РІ РіРѕРЅРєР°С… РёР»Рё С€СѓС‚РµСЂР°С…. 
+2. РїРѕРґРєР»СЋС‡РµРЅРёРµ РєР»Р°РІРёР°С‚СѓСЂС‹ Рє РєРѕРЅС‚СЂРѕР»СЋ РѕР±СЉРµРєС‚Р°РјРё. Р§С‚РѕР± РјР°С€РёРЅРєР° РµР·РґРёР»Р°!
+3. РџРѕРґРєР»СЋС‡РµРЅРёРµ С‚РµРєСЃС‚СѓСЂ. РџСЂР°РІРґР° СЃРµР№С‡Р°СЃ РҐ РѕР±СЉРµРєС‚С‹ РјРѕРіСѓС‚ РёРјРµС‚СЊ СЂР°Р·РЅС‹Рµ С‚РµРєСЃС‚СѓСЂС‹, РЅРѕ РЅР°РґРѕ РѕС‚РґРµР»СЊРЅРѕ.
+4. РџРѕР±РµРґР° РЅР°Рґ СѓС‚РµС‡РєРѕР№ РїР°РјСЏС‚Рё. РџСЂРё Р·Р°РІРµСЂС€РµРЅРёРё РїСЂРёР»РѕР¶РµРЅРёСЏ. Р‘РµСЃРёС‚! РќР°РґРѕ free РІС‹Р·С‹РІР°С‚СЊ.
 
-А вообще, моя идея с dll мега крутая!
-Странно что никто так не делает.
+Рђ РІРѕРѕР±С‰Рµ, РјРѕСЏ РёРґРµСЏ СЃ dll РјРµРіР° РєСЂСѓС‚Р°СЏ!
+РЎС‚СЂР°РЅРЅРѕ С‡С‚Рѕ РЅРёРєС‚Рѕ С‚Р°Рє РЅРµ РґРµР»Р°РµС‚.
 
-Надо сделать нормальные матрицы, через перемещение и вращение. 
-Пропорциональное изменеение пока опустим.
+РќР°РґРѕ СЃРґРµР»Р°С‚СЊ РЅРѕСЂРјР°Р»СЊРЅС‹Рµ РјР°С‚СЂРёС†С‹, С‡РµСЂРµР· РїРµСЂРµРјРµС‰РµРЅРёРµ Рё РІСЂР°С‰РµРЅРёРµ. 
+РџСЂРѕРїРѕСЂС†РёРѕРЅР°Р»СЊРЅРѕРµ РёР·РјРµРЅРµРµРЅРёРµ РїРѕРєР° РѕРїСѓСЃС‚РёРј.
